[package]
name = "canopen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-can = "0.4.1"
heapless = "0.8.0"
num-derive = "0.4.2"
num-traits = { version = "0.2.18", default-features = false }
